<resources>
    <string name="app_name">MedTracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_medication">Add Medication</string>
    <string name="med_name_query">What is the name of the medicine?</string>
    <string name="med_freq_query">How many times a day do you have to take the medication? Put zero if it is as needed.</string>
    <string name="doc_notes_query">Any notes from the doctor on the bottle?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add_med_button_text">Add Medication!</string>
    <string name="add_medication_activity_name">AddMedicationActivity</string>
    <string name="weekly_req_query">What Days of the week are you to take this medication? Enter no
    days if it is as needed.</string>
    <string name="title_activity_view_medication">ViewMedicationActivity</string>
    <string name="go_back">Go Back</string>
    <string name="med_name_label">Medication Name:\ </string>
    <string name="daily_freq_label">You are to take this medication\ </string>
    <string name="daily_freq_end_label">\ time(s) per day.</string>
    <string name="no_doc_notes_label">No notes for this entry</string>
    <string name="doc_notes_label">Doctor\'s notes:\n</string>
    <string name="delete_medication">Delete Medication</string>
    <string name="delete_medication_prompt">Are you sure you wish to delete this medication?</string>
    <string name="touch_the_medications_to_delete">Touch the Medications to delete.</string>
    <string name="medication_delete_prompt">Are you sure you wish to delete this medication?</string>
    <string name="update_medication">Update Medication</string>
    <string name="cancel_update">Cancel Update</string>
    <string name="as_needed">As needed</string>
    <string name="go_home">Go Home</string>
    <string name="daily">Daily</string>
    <string name="add_log_entry">Add Log Entry</string>
    <string name="how_much_of_this_medication_did_you_take">How many doses of this medication did you take?</string>
    <string name="any_note_or_observations">Any note or observations? (Optional)</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_entry_toast">Please enter how much you took!</string>
    <string name="view_my_medications">View My Medications</string>
    <string name="view_my_entries">View My Entries</string>
    <string name="refresh">Refresh</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="delete_log_prompt">Are you sure you wish to delete this entry?</string>
    <string name="weekly_schedule">Weekly Schedule: </string>
    <string name="num_per_day">Number Per Day: </string>
    <string name="my_medications">My Medication</string>
    <string name="medication_entries">Medication Entries</string>
    <string name="add_entry_prompt">Add new entry?</string>
    <string name="number_taken_dose_size">Number Taken/Dose Size: </string>
    <string name="date_taken">Date taken: </string>
    <string name="time_taken">Time taken: </string>
    <string name="additional_notes">Additional Notes: </string>
    <string name="daily_requirements">Daily Requirements:</string>
    <string name="filter">Filter</string>
    <string name="filter_prompt">What would you like to filter by?</string>
    <string name="medication_name_filter">Medication Name</string>
    <string name="date_taken_filter">Date Taken</string>
    <string name="medtracker">MedTracker</string>
    <string name="today_s_medication_summary">Today\'s Medication Summary</string>
    <string name="summary_monday">Summary for Monday</string>
    <string name="summary_tuesday">Summary for Tuesday</string>
    <string name="summary_wednesday">Summary for Wednesday</string>
    <string name="summary_thursday">Summary for Thursday</string>
    <string name="summary_friday">Summary for Friday</string>
    <string name="summary_saturday">Summary for Saturday</string>
    <string name="summary_sunday">Summary for Sunday</string>
    <string name="required_medication">Required Medication:</string>
    <string name="medication_taken">Medication Taken:</string>
    <string name="nothing_taken">Nothing taken yet today!</string>


</resources>
