<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="16dp"
    android:background="@android:color/white"
    >

    <EditText
        android:id="@+id/med_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/med_name_query"
        android:paddingBottom="10dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/med_daily_req_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/med_freq_query"
        android:paddingBottom="10dp"
        android:textSize="14sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_req_query"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monday_cb"
            android:text="@string/monday"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuesday_cb"
            android:text="@string/tuesday"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wednesday_cb"
            android:text="@string/wednesday"

            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thursday_cb"
            android:text="@string/thursday"


            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friday_cb"
            android:text="@string/friday"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saturday_cb"
            android:text="@string/saturday"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sunday_cb"
            android:text="@string/sunday"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/doc_notes_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doc_notes_query"
        android:textSize="14sp" />

    <Button
        android:id="@+id/add_med_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/add_med_button_text"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/add_go_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:layout_gravity="center"
        android:background="@android:color/background_light"
        android:text="@string/go_home"
        android:textColor="@color/colorPrimary"
        tools:textColorHighlight="@color/colorAccent" />

</LinearLayout>
</ScrollView>