<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/view_entry_med_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Medication" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_entry_med_name_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/dose_size_label"
        android:text="@string/number_taken_dose_size"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_entry_doses_tv"
        app:layout_constraintTop_toBottomOf="@id/view_entry_med_name_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toRightOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_label"
        android:text="@string/date_taken"
        app:layout_constraintTop_toBottomOf="@id/view_entry_doses_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_entry_date_tv"
        app:layout_constraintTop_toBottomOf="@id/view_entry_doses_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toRightOf="@id/date_label"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_label"
        android:text="@string/time_taken"
        app:layout_constraintTop_toBottomOf="@id/view_entry_date_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_entry_time_tv"
        app:layout_constraintTop_toBottomOf="@id/view_entry_date_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toRightOf="@id/time_label"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notes_label"
        android:text="@string/additional_notes"
        app:layout_constraintTop_toBottomOf="@id/view_entry_time_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_entry_notes_tv"
        app:layout_constraintTop_toBottomOf="@id/view_entry_time_tv"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toRightOf="@id/notes_label"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_entry_delete_button"
        android:text="@string/delete_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_entry_go_back_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_entry_go_back_button"
        android:text="@string/go_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        />

</android.support.constraint.ConstraintLayout>